# PitchCopyTrade

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
deploy/: Dockerfile.bot  README.md  docker-compose.server.yml  env.server.example  fix_duplicate_users.sql  https_login_guide.html  merge_duplicate_users.sql  migrate.sh  schema.sql  seed_staff.sql
doc/: Pitch_CopyTrade_Bot_blueprint_for_codex.md  Pitch_CopyTrade_Bot_codex_task_pack.md  README.md  blueprint.md  codex_reviewer_master_prompt.md  instruments_stub.json  review.md  task.md
scripts/: clean_storage.sh  local_file_profile.sh  local_file_smoke.sh  reset.sh
tests/: test_access_delivery.py  test_acl_delivery_services.py  test_admin_strategy_service.py  test_admin_ui.py  test_alembic_foundation.py  test_auth.py  test_auth_foundation.py  test_auth_ui.py  test_author_services.py  test_author_ui.py  test_bot_baseline.py  test_broadcast.py  test_compliance_foundation.py  test_config_runtime.py  test_db_models.py  test_delivery_admin.py  test_deploy_server_files.py  test_dev_bootstrap.py  test_file_repositories.py  test_grid_serializers.py  test_health.py  test_instruments_api.py  test_instruments_service.py  test_legal_admin.py  test_lifecycle.py  test_message_rendering.py  test_messages.py  test_moderation_ui.py  test_notifications_service.py  test_payment_sync.py  test_preview_mode.py  test_public_catalog_checkout.py  test_publishing_worker.py  test_recommendations.py  test_request_trace.py  test_seeders.py  (+6 more)
(+207 files in other folders)
