[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pitchcopytrade"
version = "0.1.0"
description = "PitchCopyTrade foundation stack"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "aiogram>=3.18,<4.0",
  "sqlalchemy>=2.0,<3.0",
  "greenlet>=3.1,<4.0",
  "alembic>=1.14,<2.0",
  "asyncpg>=0.30,<1.0",
  "jinja2>=3.1,<4.0",
  "pydantic-settings>=2.7,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "minio>=7.2,<8.0",
  "email-validator>=2.2,<3.0",
  "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pitchcopytrade*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
